--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "fastmcp>=2.12.4",
     "mcp[cli]>=1.16.0",
     "pydantic>=2.11.9",
+    "python-dotenv>=1.1.1",
 ]
